--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,33 @@
+body {
+    margin: 15px !important;
+}
+
 /* Hero Image */
 .hero-image {
     position: relative;
 }
 
-.header {
+#homepage-cta {
     position: absolute;
-    top: 100px;
-    right: 80px;
+    max-width: 180px;
+    max-height: 50px;
+    text-align: center;
+    top: 70px;
+    right: 15px;
+}
+
+#homepage-cta h3 {
+    color: #967950
+}
+
+#homepage-cta p {
+    font-size: 0.8em;
+    color: white
+}
+
+.text-muted {
+    position: absolute;
+    top: 254px;
+    right: 25px;
+    font-size: 0.5em;
 }
