--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,7 @@ body h4,h5,h6 {
     font-size: 0.5em !important;
 }
 
-/* Customer Reviews */
+/* Reviews */
 .blockquote {
     text-align: center;
 }
@@ -69,6 +69,10 @@ body h4,h5,h6 {
 
 .fa-star {
     color: #967950
+}
+
+.quote {
+    margin: 20px 20px 0px;
 }
 
 /* for 4k screens size from 2560px wide and down */
