--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,29 @@ body h4,h5,h6 {
     margin: 20px 20px 0px;
 }
 
+/* All About Gin */
+.gin-facts {
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.fa-lightbulb {
+    font-size: 2em;
+}
+
+.gin-rank {
+    font-size: 1.5em;
+    color: #9eb273;
+}
+
+.best-for {
+    text-decoration: underline;
+}
+
+.price {
+    font-size: 2.5em;
+}
+
 /* for 4k screens size from 2560px wide and down */
 @media screen and (max-width: 2560px) {
     .card-title {
