--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,29 +40,19 @@ body h4,h5,h6 {
     font-size: 2em !important;
 }
 
-.card-img {
-    width: 100% !important;
-    height: auto;
+#hero-image {
+    position: relative;
 }
 
-.card-img-overlay {
-    text-align: center;
-    position: absolute;
-    top: 25% !important;
-    left: 27% !important;
-    width: 100% !important;
+.card {
+    position: absolute !important;
+    top: 30% !important;
+    left: 54%;
+    width: max-content;
     padding: 1rem;
     border-radius: calc(.25rem - 1px);
-}
-
-.disclaimer {
-    text-align: right;
-    position: absolute;
-    bottom: 40% !important;
-    width: 45% !important;
-    right: 28%;
-    font-size: 1.2em !important;
-    color: white;
+    border-color: rgba(0, 0, 0, 0) !important;
+    background-color: rgba(0, 0, 0, 0) !important;
 }
 
 /* Reviews */
@@ -173,13 +163,13 @@ body h4,h5,h6 {
     }
 
     .card-img-overlay {
-        top: 25% !important;
+        top: 32% !important;
         left: 27% !important;
     }
     
     .disclaimer {
         font-size: 1.2em !important;
-        bottom: 48% !important;
+        bottom: 18% !important;
         right: 28%;
     }
 }
