--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,78 @@ body h4,h5,h6 {
     margin: 20px 20px 0px;
 }
 
+/* Carousel Reviews */
+.section-owl-carousel {
+    background-color: whitesmoke;
+    min-height: 30vh
+}
+
+.owl-carousel .owl-item {
+    transition: all 0.3s ease-in-out
+}
+
+.owl-carousel .owl-item .card {
+    padding: 30px;
+    position: relative
+}
+
+.owl-carousel .owl-stage-outer {
+    overflow-y: auto !important;
+    padding-bottom: 40px
+}
+
+.owl-carousel .owl-item img {
+    height: 200px;
+    object-fit: cover;
+    border-radius: 6px
+}
+
+.owl-carousel .owl-item .card .name {
+    position: absolute;
+    bottom: -20px;
+    left: 33%;
+    color: whitesmoke;
+    font-size: 1.1rem;
+    font-weight: 600;
+    background-color: #967950;
+    padding: 0.3rem 0.4rem;
+    border-radius: 5px;
+    box-shadow: 2px 3px 15px darkslategray;
+}
+
+.owl-carousel .owl-item .card {
+    opacity: 0.2;
+    transform: scale3d(0.8, 0.8, 0.8);
+    transition: all 0.3s ease-in-out
+}
+
+.owl-carousel .owl-item.active.center .card {
+    opacity: 1;
+    transform: scale3d(1, 1, 1)
+}
+
+.owl-carousel .owl-dots {
+    display: inline-block;
+    width: 100%;
+    text-align: center
+}
+
+.owl-theme .owl-dots .owl-dot span {
+    height: 20px;
+    background: lightgrey !important;
+    border-radius: 2px !important;
+    opacity: 0.8
+}
+
+.owl-theme .owl-dots .owl-dot.active span,
+.owl-theme .owl-dots .owl-dot:hover span {
+    height: 13px;
+    width: 13px;
+    opacity: 1;
+    transform: translateY(2px);
+    background: #967950 !important
+}
+
 /* Gallery */
 .gin-gallery-container {
     display: grid;
@@ -178,6 +250,10 @@ body h4,h5,h6 {
     color: white !important;
 }
 
+.inspired-text h6 {
+    margin: 0;
+}
+
 @keyframes move-down{
 
     0% {
@@ -248,28 +324,22 @@ body h4,h5,h6 {
 
 .bartender-intro {
     background-color:hsl(141, 23%, 33%);
+    background-image: url("../images/juniper.jpg");
+    background-repeat:no-repeat; 
+    background-size:cover; 
     color: white;
     text-align: center;
     padding: 10px 60px;
 }
 
 #bartender-heading {
-    color: white !important;
     margin-top: 10px;
     text-align: center;
-    background-color: #636363;
     padding: 10px 20px;
 }
 
-#bartender-heading h3 {
-    color: white !important;
-    margin-top: 10px;
-    text-align: center;
-    background-color: #636363;
-}
-
 .bartender-info {
-    padding-top: 20px;
+    padding-top: 2rem;
 }
 
 /* Google Map */
