--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -319,34 +319,6 @@ body h4,h5,h6 {
 }
 
 /* SignUp */
-/*.signup-container {
-    width: 100%;
-    height: 100%;
-    padding: 10px 20px;
-}
-
-.signup-container:before,
-.signup-container:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-.signup-container div {
-    float: left;
-    width: 47vw;
-    height: 100%;
-}
-
-.signup-container h4 {
-    text-align: center;
-    padding: 2rem 0;
-}
-
-.login {
-    margin-left: 50px;
-}*/
-
 #gintopia-signup {
 	background: #f6f5f7;
 	display: flex;
@@ -354,8 +326,8 @@ body h4,h5,h6 {
 	align-items: center;
 	flex-direction: column;
 	font-family: 'Montserrat', sans-serif;
-	height: 100vh;
-	margin: -20px 0 50px;
+	height: 60vh;
+	margin: 20px 0;
 }
 
 h1 {
@@ -367,7 +339,7 @@ h2 {
 }
 
 .p-signup {
-	font-size: 14px;
+	font-size: 1.2em;
 	font-weight: 100;
 	line-height: 20px;
 	letter-spacing: 0.5px;
@@ -380,8 +352,8 @@ h2 {
 
 .button-signup {
 	border-radius: 20px;
-	border: 1px solid #FF4B2B;
-	background-color: #FF4B2B;
+	border: 1px solid #967950;
+	background-color: #967950;
 	color: #FFFFFF;
 	font-size: 12px;
 	font-weight: bold;
@@ -494,9 +466,7 @@ h2 {
 }
 
 .overlay-su {
-	background: #FF416C;
-	background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-	background: linear-gradient(to right, #FF4B2B, #FF416C);
+	background: #b9ca90;
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 0 0;
@@ -507,6 +477,10 @@ h2 {
 	width: 200%;
   	transform: translateX(0);
 	transition: transform 0.6s ease-in-out;
+}
+
+.overlay-panel-su h1 {
+    color: white !important;
 }
 
 .container-su.right-panel-active .overlay-su {
